--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,6 @@ python-telegram-bot
 bs4 
 user_agent 
 ping3 
-nmap 
 tcping 
 pyping 
 youtube_dl 
@@ -16,3 +15,4 @@ tgcrypto
 aiohttp
 yarl
 mega.py
+python-nmap
